# meshcore-base

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
src/: app.py  meshcore_service.py  routes.py  run.py
src/database/: models.py
src/meshcore_web/: __init__.py  app.py  meshcore_service.py  meshcore_service.py.bak  routes.py
src/meshcore_web/database/: __init__.py  models.py
src/meshcore_web/templates/: base.html  index.html
src/static/css/: style.css
src/static/js/: app.js
