[tool.poetry]
name = "meshcore-web"
version = "0.1.0"
description = "A modern web client for MeshCore"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"
SQLAlchemy = "^2.0.23"
meshcore-py = "^1.0.0"
pyserial = "^3.5"
python-dotenv = "^1.0.0"
Flask-SQLAlchemy = "^3.1.1"
Flask-Login = "^0.6.3"
Flask-WTF = "^1.2.1"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"